head professor part

--- a/people.html
+++ b/people.html
@@ -5,3 +5,49 @@ description:
 background: '/img/bg-about.jpg'
 ---
 
+<article class="people">
+    <div class="head-professor">
+        <div class="professor-left">
+            <img src="/img/posts/hmpark.jpg">
+            <div>
+                <b id="professor-name">Ha-Myung Park</b>
+                <ul id="professor-link">
+                    <li>Assistant Professor</li>
+                    <li>Office: 미래관 403호</li>
+                    <li>Email: hmpark@kookmin.ac.kr</li>
+                    <li>WWW: <a href="http://hmpark.me">http://hmpark.me</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="professor-right">
+            <div class="career">
+                <b>Honours and Awards</b>
+                <ul>
+                    <li>Naver PhD Fellowship Award, (Dec. 2016)</li>
+                    <li>IEEE ICDM 2016 Student Travel Award, (Nov. 2016)</li>
+                    <li>HumanTech award (silver), Samsung (Feb. 2016)</li>
+                </ul>
+            </div>
+            <div class="career">
+                <b>Research Interest</b>
+                <ul>
+                    <li>Large scale graph mining</li>
+                    <li>Scalable machine learning and data mining</li>
+                </ul>
+            </div>
+            <div class="career">
+                <b>Projects</b>
+                <ul>
+                    <li>Distributed K-Nearest-Neighbor Graph Construction and Search for Scalable High-dimensional Data Analyses (2020 - Now)</li>
+                    <li>Efficient Triangle Enumeration on Heterogeneous Clusters (2019 - 2020)</li>
+                    <li>Exobrain, Development of Core Technology for Human-like Self-taught Learning based on a Symbolic Approach (2014 - 2019)</li>
+                    <li>Large Scale Matrix Computation for Personalized Recommendation (2013 - 2014)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="student">
+
+    </div>
+</article>
+<hr>
