--- a/people.html
+++ b/people.html
@@ -6,13 +6,15 @@ background: '/img/bg-about.jpg'
 ---
 
 <article class="people">
+    <div class="division-line">Assistant Professor</div>
     <div class="head-professor">
         <div class="professor-left">
             <img src="/img/posts/hmpark.jpg">
             <div>
                 <b id="professor-name">Ha-Myung Park</b>
+                <span>Assistant Professor</span>
                 <ul id="professor-link">
-                    <li>Assistant Professor</li>
+                    
                     <li>Office: 미래관 403호</li>
                     <li>Email: hmpark@kookmin.ac.kr</li>
                     <li>WWW: <a href="http://hmpark.me">http://hmpark.me</a></li>
@@ -46,6 +48,7 @@ background: '/img/bg-about.jpg'
             </div>
         </div>
     </div>
+    <div class="division-line">Postgraduate Student</div>
     <div class="student">
 
     </div>
