--- a/people.html
+++ b/people.html
@@ -49,8 +49,48 @@ background: '/img/bg-about.jpg'
         </div>
     </div>
     <div class="division-line">Postgraduate Student</div>
-    <div class="student">
-
+    <div class="students">
+        <div class="student">
+            <div class="student-top">
+                <img src="/img/posts/unknown.jpg">
+            </div>
+            <div class="student-down">
+                <b class="student-name">unknown</b>
+                <p class="student-field">AI Engineer</p>
+                <p class="student-email">unknown@kookmin.ac.kr</p>
+            </div>
+        </div>
+        <div class="student">
+            <div class="student-top">
+                <img src="/img/posts/unknown.jpg">
+            </div>
+            <div class="student-down">
+                <b class="student-name">unknown</b>
+                <p class="student-field">AI Engineer</p>
+                <p class="student-email">unknown@kookmin.ac.kr</p>
+            </div>
+        </div>
+        <div class="student">
+            <div class="student-top">
+                <img src="/img/posts/unknown.jpg">
+            </div>
+            <div class="student-down">
+                <b class="student-name">unknown</b>
+                <p class="student-field">AI Engineer</p>
+                <p class="student-email">unknown@kookmin.ac.kr</p>
+            </div>
+        </div>
+        <div class="student">
+            <div class="student-top">
+                <img src="/img/posts/unknown.jpg">
+            </div>
+            <div class="student-down">
+                <b class="student-name">unknown</b>
+                <p class="student-field">AI Engineer</p>
+                <p class="student-email">unknown@kookmin.ac.kr</p>
+            </div>
+        </div>
     </div>
+    
 </article>
 <hr>
