change bg image

--- a/people.html
+++ b/people.html
@@ -19,6 +19,12 @@ background: '/img/bg-about.jpg'
                     <li>Email: hmpark@kookmin.ac.kr</li>
                     <li>WWW: <a href="http://hmpark.me">http://hmpark.me</a></li>
                 </ul>
+                <!--
+                <div class="professor-link">
+                    <a><i class="fab fa-github"></i></a>
+                    <a><i class="fab fa-instagram-square"></i></a>
+                </div>  
+                --> 
             </div>
         </div>
         <div class="professor-right">
