--- a/publications.html
+++ b/publications.html
@@ -4,3 +4,56 @@ title: Publications
 description: 
 background: '/img/bg-contact.jpg'
 ---
+<div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2020
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart, World Wide Web Journal (WWWJ)</b>
+                <br>
+                Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang
+            </div>     
+            <div class="publication">
+                <b>PACC: Large Scale Connected Component Computation on Hadoop and Spark, PLOS ONE </b>
+                <br>
+                Ha-Myung Park, Namyong Park, Sung-Hyon Myaeng, and U Kang 
+            </div>       
+            <div class="publication">
+                <b>FlexGraph: flexible partitioning and storage for scalable graph mining, PLOS ONE</b>
+                <br>
+                Chiwan Park, Ha-Myung Park. and U Kang
+            </div>          
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2018
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>Enumerating Trillion Subgraphs On Distributed Systems, ACM Transactions on Knowledge Discovery from Data (TKDD)</b>
+                <br>
+                Ha-Myung Park, Francesco Silvestri, Rasmus Pagh, Chin-wan Chung, Sung-Hyon Myaeng, and U Kang
+            </div>    
+            <div class="publication">
+                <b>PegasusN: A Scalable and Versatile Graph Mining System, AAAI Conference on Artificial Intelligence (AAAI)</b>
+                <br>
+                Ha-Myung Park, Chiwan Park, and U Kang
+            </div>      
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2017
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>A New Question Answering Approach with Conceptual Graphs, Conférence en Recherche d’Information et Applications (CORIA)</b>
+                <br>
+                Kyung-Min Kim, Jinhong Jung, Jihee Ryu, Ha-Myung Park, Joseph P.Joohee, Seokwoo Jeong, U Kang, and Sung-Hyon Myaeng
+            </div>       
+        </div>
+    </div>
+</div>
