add link tag on publication

--- a/publications.html
+++ b/publications.html
@@ -12,19 +12,30 @@ background: '/img/bg-contact.jpg'
         <div class="publications">
             <div class="publication">
                 <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart, World Wide Web Journal (WWWJ)</b>
+                <a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>
                 <br>
                 Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang
             </div>     
             <div class="publication">
-                <b>PACC: Large Scale Connected Component Computation on Hadoop and Spark, PLOS ONE </b>
+                <b>PACC: Large Scale Connected Component Computation on Hadoop and Spark</b>
+                <a href="https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0229936&type=printable" class="publication-link">[PDF]</a>
+                <a href="https://github.com/kmudmlab/PACC" class="publication-link">[Github]</a>
                 <br>
                 Ha-Myung Park, Namyong Park, Sung-Hyon Myaeng, and U Kang 
             </div>       
             <div class="publication">
-                <b>FlexGraph: flexible partitioning and storage for scalable graph mining, PLOS ONE</b>
+                <b>FlexGraph: flexible partitioning and storage for scalable graph mining</b>
+                <a href="https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0227032&type=printable" class="publication-link">[PDF]</a>
+                <a href="https://github.com/snudatalab/FlexGraph/" class="publication-link">[Github]</a>
                 <br>
                 Chiwan Park, Ha-Myung Park. and U Kang
-            </div>          
+            </div> 
+            <div class="publication">
+                <b>BalanSiNG: Fast and Scalable Generation of Realistic Signed Networks, International Conference on Extending Database Technology (EDBT)</b> 
+                <a href="https://datalab.snu.ac.kr/balansing/resources/balansingEDBT20.pdf" class="publication-link">[PDF]</a>
+                <br>
+                Jinhong Jung, Ha-Myung Park, and U Kang
+            </div>       
         </div>
     </div>
     <div class="publications-per-year">
@@ -34,14 +45,18 @@ background: '/img/bg-contact.jpg'
         <div class="publications">
             <div class="publication">
                 <b>Enumerating Trillion Subgraphs On Distributed Systems, ACM Transactions on Knowledge Discovery from Data (TKDD)</b>
+                <a href="https://datalab.snu.ac.kr/~ukang/papers/pseTKDD18.pdf" class="publication-link">[PDF]</a>
+                <a href="https://datalab.snu.ac.kr/pegasusn/" class="publication-link">[Homepage]</a>
                 <br>
-                Ha-Myung Park, Francesco Silvestri, Rasmus Pagh, Chin-wan Chung, Sung-Hyon Myaeng, and U Kang
+                Ha-Myung Park, Francesco Silvestri, Rasmus Pagh, Chin-wan Chung, Sung-Hyon Myaeng, and U Kang            
             </div>    
             <div class="publication">
                 <b>PegasusN: A Scalable and Versatile Graph Mining System, AAAI Conference on Artificial Intelligence (AAAI)</b>
+                <a href="https://datalab.snu.ac.kr/~ukang/papers/pegasusnAAAI18.pdf" class="publication-link">[PDF]</a>
+                <a href="https://datalab.snu.ac.kr/pegasusn/" class="publication-link">[Homepage]</a>
                 <br>
-                Ha-Myung Park, Chiwan Park, and U Kang
-            </div>      
+                Ha-Myung Park, Chiwan Park, and U Kang            
+            </div>         
         </div>
     </div>
     <div class="publications-per-year">
@@ -51,6 +66,7 @@ background: '/img/bg-contact.jpg'
         <div class="publications">
             <div class="publication">
                 <b>A New Question Answering Approach with Conceptual Graphs, Conférence en Recherche d’Information et Applications (CORIA)</b>
+                <a href="https://datalab.snu.ac.kr/~ukang/papers/qaCORIA17.pdf" class="publication-link">[PDF]</a>
                 <br>
                 Kyung-Min Kim, Jinhong Jung, Jihee Ryu, Ha-Myung Park, Joseph P.Joohee, Seokwoo Jeong, U Kang, and Sung-Hyon Myaeng
             </div>       
