add division line(undergraduate student)

--- a/people.html
+++ b/people.html
@@ -123,6 +123,9 @@ background: '/img/bg-about.jpg'
             </div>
         </div>
     </div>
+
+    <div class="division-line">Undergraduate Student</div>
+
     
 </article>
 <hr>
