--- a/people.html
+++ b/people.html
@@ -49,7 +49,7 @@ background: '/img/bg-about.jpg'
         </div>
     </div>
 
-    <div class="division-line">Postgraduate Student</div>
+    <div class="division-line">Graduate Student</div>
 
     <div class="students">
         <div class="student">
