--- a/people.html
+++ b/people.html
@@ -6,46 +6,19 @@ background: '/img/bg-about.jpg'
 ---
 
 <article class="people">
-    <div class="division-line">Assistant Professor</div>
+    <div class="division-line">Principal Investigator</div>
     <div class="head-professor">
         <div class="professor-left">
             <img src="/img/posts/hmpark.jpg">
-            <div>
-                <b id="professor-name">Ha-Myung Park</b>
-                <span>Assistant Professor</span>
-                <ul id="professor-link">
-                    
-                    <li>Office: 미래관 403호</li>
-                    <li>Email: hmpark@kookmin.ac.kr</li>
-                    <li>WWW: <a href="http://hmpark.me">http://hmpark.me</a></li>
-                </ul>
-            </div>
         </div>
         <div class="professor-right">
-            <div class="career">
-                <b>Honours and Awards</b>
-                <ul>
-                    <li>Naver PhD Fellowship Award, (Dec. 2016)</li>
-                    <li>IEEE ICDM 2016 Student Travel Award, (Nov. 2016)</li>
-                    <li>HumanTech award (silver), Samsung (Feb. 2016)</li>
-                </ul>
-            </div>
-            <div class="career">
-                <b>Research Interest</b>
-                <ul>
-                    <li>Large scale graph mining</li>
-                    <li>Scalable machine learning and data mining</li>
-                </ul>
-            </div>
-            <div class="career">
-                <b>Projects</b>
-                <ul>
-                    <li>Distributed K-Nearest-Neighbor Graph Construction and Search for Scalable High-dimensional Data Analyses (2020 - Now)</li>
-                    <li>Efficient Triangle Enumeration on Heterogeneous Clusters (2019 - 2020)</li>
-                    <li>Exobrain, Development of Core Technology for Human-like Self-taught Learning based on a Symbolic Approach (2014 - 2019)</li>
-                    <li>Large Scale Matrix Computation for Personalized Recommendation (2013 - 2014)</li>
-                </ul>
-            </div>
+            <b>Ha-Myung Park</b>
+            <span>Assistant Professor</span>
+            <ul id="professor-link">
+                <li>Office: Room 403, Future Hall (미래관)</li>
+                <li>Email: hmpark@kookmin.ac.kr</li>
+                <li>WWW: <a href="http://hmpark.me">http://hmpark.me</a></li>
+            </ul>
         </div>
     </div>
 
