--- a/people.html
+++ b/people.html
@@ -12,8 +12,12 @@ background: '/img/bg-about.jpg'
             <img src="/img/posts/hmpark.jpg">
         </div>
         <div class="professor-right">
-            <b>Ha-Myung Park</b>
-            <span>Assistant Professor</span>
+            <div class="professor-name">Ha-Myung Park</div>
+            <div class="professor-field">
+                Assistant Professor<br>
+                Collage of Computer Science<br>
+                Kookmin University
+            </div>
             <ul id="professor-link">
                 <li>Office: Room 403, Future Hall (미래관)</li>
                 <li>Email: hmpark@kookmin.ac.kr</li>
