--- a/people.html
+++ b/people.html
@@ -26,7 +26,7 @@ background: '/img/bg-about.jpg'
         </div>
     </div>
 
-    <div class="division-line">Graduate Student</div>
+    <div class="division-line">Graduate Students</div>
 
     <div class="students">
     {% for student in site.data.graduate_student %}
@@ -57,7 +57,7 @@ background: '/img/bg-about.jpg'
     {% endfor %}
     </div>
 
-    <div class="division-line">Undergraduate Student</div>
+    <div class="division-line">Undergraduate Students</div>
     
     <div class="students">
         {% for student in site.data.undergraduate_student %}
