--- a/publications.html
+++ b/publications.html
@@ -11,30 +11,30 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
-                <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart, World Wide Web Journal (WWWJ)</b>
+                <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart</b><br>
+                World Wide Web Journal (WWWJ)<br>
+                Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang<br>
                 <a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>
-                <br>
-                Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang
             </div>     
             <div class="publication">
-                <b>PACC: Large Scale Connected Component Computation on Hadoop and Spark</b>
+                <b>PACC: Large Scale Connected Component Computation on Hadoop and Spark</b><br>
+                PLOS ONE<br>
+                Ha-Myung Park, Namyong Park, Sung-Hyon Myaeng, and U Kang<br>
                 <a href="https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0229936&type=printable" class="publication-link">[PDF]</a>
                 <a href="https://github.com/kmudmlab/PACC" class="publication-link">[Github]</a>
-                <br>
-                Ha-Myung Park, Namyong Park, Sung-Hyon Myaeng, and U Kang 
             </div>       
             <div class="publication">
-                <b>FlexGraph: flexible partitioning and storage for scalable graph mining</b>
+                <b>FlexGraph: flexible partitioning and storage for scalable graph mining</b><br>
+                PLOS ONE<br>
+                Chiwan Park, Ha-Myung Park. and U Kang<br>
                 <a href="https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0227032&type=printable" class="publication-link">[PDF]</a>
                 <a href="https://github.com/snudatalab/FlexGraph/" class="publication-link">[Github]</a>
-                <br>
-                Chiwan Park, Ha-Myung Park. and U Kang
             </div> 
             <div class="publication">
-                <b>BalanSiNG: Fast and Scalable Generation of Realistic Signed Networks, International Conference on Extending Database Technology (EDBT)</b> 
-                <a href="https://datalab.snu.ac.kr/balansing/resources/balansingEDBT20.pdf" class="publication-link">[PDF]</a>
-                <br>
+                <b>BalanSiNG: Fast and Scalable Generation of Realistic Signed Networks</b><br>
+                International Conference on Extending Database Technology (EDBT)<br>
                 Jinhong Jung, Ha-Myung Park, and U Kang
+                <a href="https://datalab.snu.ac.kr/balansing/resources/balansingEDBT20.pdf" class="publication-link">[PDF]</a>
             </div>       
         </div>
     </div>
@@ -44,18 +44,18 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
-                <b>Enumerating Trillion Subgraphs On Distributed Systems, ACM Transactions on Knowledge Discovery from Data (TKDD)</b>
+                <b>Enumerating Trillion Subgraphs On Distributed Systems</b><br>
+                ACM Transactions on Knowledge Discovery from Data (TKDD)<br>
+                Ha-Myung Park, Francesco Silvestri, Rasmus Pagh, Chin-wan Chung, Sung-Hyon Myaeng, and U Kang<br>
                 <a href="https://datalab.snu.ac.kr/~ukang/papers/pseTKDD18.pdf" class="publication-link">[PDF]</a>
                 <a href="https://datalab.snu.ac.kr/pegasusn/" class="publication-link">[Homepage]</a>
-                <br>
-                Ha-Myung Park, Francesco Silvestri, Rasmus Pagh, Chin-wan Chung, Sung-Hyon Myaeng, and U Kang            
             </div>    
             <div class="publication">
-                <b>PegasusN: A Scalable and Versatile Graph Mining System, AAAI Conference on Artificial Intelligence (AAAI)</b>
+                <b>PegasusN: A Scalable and Versatile Graph Mining System</b><br>
+                AAAI Conference on Artificial Intelligence (AAAI)<br>
+                Ha-Myung Park, Chiwan Park, and U Kang<br>
                 <a href="https://datalab.snu.ac.kr/~ukang/papers/pegasusnAAAI18.pdf" class="publication-link">[PDF]</a>
                 <a href="https://datalab.snu.ac.kr/pegasusn/" class="publication-link">[Homepage]</a>
-                <br>
-                Ha-Myung Park, Chiwan Park, and U Kang            
             </div>         
         </div>
     </div>
@@ -65,11 +65,65 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
-                <b>A New Question Answering Approach with Conceptual Graphs, Conférence en Recherche d’Information et Applications (CORIA)</b>
+                <b>A New Question Answering Approach with Conceptual Graphs</b><br>
+                Conférence en Recherche d’Information et Applications (CORIA)<br>
+                Kyung-Min Kim, Jinhong Jung, Jihee Ryu, Ha-Myung Park, Joseph P.Joohee, Seokwoo Jeong, U Kang, and Sung-Hyon Myaeng<br>
                 <a href="https://datalab.snu.ac.kr/~ukang/papers/qaCORIA17.pdf" class="publication-link">[PDF]</a>
-                <br>
-                Kyung-Min Kim, Jinhong Jung, Jihee Ryu, Ha-Myung Park, Joseph P.Joohee, Seokwoo Jeong, U Kang, and Sung-Hyon Myaeng
-            </div>       
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2016
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>Partition Aware Connected Component Computation in Distributed Systems</b><br>
+                IEEE International Conference on Data Mining (ICDM)<br>
+                Ha-Myung Park, Namyong Park, Sung-Hyon Myaeng, U Kang<br>
+                <a href="https://datalab.snu.ac.kr/~hmpark/papers/icdm2016_pacc.pdf" class="publication-link">[PDF]</a>
+                <a href="http://datalab.snu.ac.kr/pacc/" class="publication-link">[Homepage]</a>
+            </div>
+            <div class="publication">
+                <b>PTE: Enumerating Trillion Triangles On Distributed Systems</b><br>
+                ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
+                Ha-Myung Park, Sung-Hyon Myaeng, U Kang<br>
+                <a href="https://datalab.snu.ac.kr/~hmpark/papers/pteKDD2016.pdf" class="publication-link">[PDF]</a>
+                <a href="http://datalab.snu.ac.kr/pte/" class="publication-link">[Homepage]</a>
+            </div>
+            <div class="publication">
+                <b>The Direction-Constrained k Nearest Neighbor Query: Dealing With Spatio-Directional Objects</b><br>
+                Geoinformatica 20(3)<br>
+                Min Joong Lee, Dong Wan Choi, Sangyon Kim, Ha-Myung Park, Sunghee Choi, Chin-Wan Chung<br>
+                <a href="http://islab.kaist.ac.kr/dknn.pdf" class="publication-link">[PDF]</a>
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2014
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>MapReduce Triangle Enumeration With Guarentees</b><br>
+                ACM International Conference on Information and Knowledge Management (CIKM)<br>
+                Ha-Myung Park, Francesco Silvestri, U Kang, Rasmus Pagh<br>
+                <a href="http://datalab.snu.ac.kr/~ukang/papers/cttpCIKM2014.pdf" class="publication-link">[PDF]</a>
+                <a href="http://datalab.snu.ac.kr/cttp" class="publication-link">[Homepage]</a>
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2014
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>An Efficient MapReduce Algorithm for Counting Triangles in a Very Large graph</b><br>
+                ACM International Conference on Information and Knowledge Management (CIKM)<br>
+                Ha-Myung Park, Chin-Wan Chung<br>
+                <a href="https://datalab.snu.ac.kr/~hmpark/papers/p539-park.pdf" class="publication-link">[PDF]</a>
+            </div>
         </div>
     </div>
 </div>
