--- a/publications.html
+++ b/publications.html
@@ -11,6 +11,19 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
+                <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart (to appear)</b><br>
+                PLOS ONE<br>
+                Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
+                <!--<a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>-->
+            </div>     
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2020
+        </div>
+        <div class="publications">
+            <div class="publication">
                 <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart</b><br>
                 World Wide Web Journal (WWWJ)<br>
                 Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang<br>
