--- a/publications.html
+++ b/publications.html
@@ -5,13 +5,14 @@ description:
 background: '/img/bg-contact.jpg'
 ---
 <div>
+    <div class="publication-title">International</div>
     <div class="publications-per-year">
         <div class="year-mark">
             2022
         </div>
         <div class="publications">
             <div class="publication">
-                <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart (to appear)</b><br>
+                <b>UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware (to appear)</b><br>
                 PLOS ONE<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
                 <!--<a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>-->
@@ -136,6 +137,38 @@ background: '/img/bg-contact.jpg'
                 ACM International Conference on Information and Knowledge Management (CIKM)<br>
                 Ha-Myung Park, Chin-Wan Chung<br>
                 <a href="https://datalab.snu.ac.kr/~hmpark/papers/p539-park.pdf" class="publication-link">[PDF]</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <div class="publication-title">Domestic</div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2021
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>그래프 사전 분할 기법을 활용한 Butterfly Counting MapReduce 알고리즘</b><br>
+                한국컴퓨터종합학술대회 논문집<br>
+                허태정, 이용준, 박하명<br>
+            </div>
+            <div class="publication">
+                <b>너비 우선 탐색(BFS) 기법 기반 국내 유튜브(Youtube) 동영상 정보 크롤링 기법 및 국내 Youtube 데이터셋 구축</b><br>
+                한국컴퓨터종합학술대회 논문집<br>
+                김태영, 박하명<br>
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2014
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>대용량 그래프에서의 삼각형 검색 연구 : 알고리즘과 응용</b><br>
+                한국통신학회지(정보와통신)<br>
+                박하명, 강유<br>
             </div>
         </div>
     </div>
