--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,28 @@ background: '/img/bg-contact.jpg'
     <div class="publication-title">Domestic</div>
     <div class="publications-per-year">
         <div class="year-mark">
+            2022
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>기상관측정보를 고려한 오토인코더 기반 멀티모달 기상위성영상 임베딩 기법 연구</b><br>
+                한국소프트웨어종합학술대회<br>
+                김유진, 이소정, 박하명<br>
+            </div>
+            <div class="publication">
+                <b>맵리듀스 환경에서 프로덕트 양자화</b><br>
+                한국소프트웨어종합학술대회<br>
+                조재오, 박하명<br>
+            </div>
+            <div class="publication">
+                <b>국내 판례 참조 네트워크 구축 및 분석</b><br>
+                한국소프트웨어종합학술대회<br>
+                송용욱, 박하명<br>
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
             2021
         </div>
         <div class="publications">
