--- a/people.html
+++ b/people.html
@@ -44,7 +44,7 @@ background: '/img/bg-about.jpg'
                 <p class="student-field">{{ student.interest }}</p>
                 <hr class="student-division">
                 <div class="student-info">
-                    <p class="student-email">Email: {{ student.email }}</p>
+                    <p class="student-email">{{ student.email }}</p>
                     <div class="student-link">
                         {% if student.github != null and student.github != "" %}
                             <a target="_blank" href="{{ student.github }}"><i class="fab fa-github"></i></a>
@@ -70,9 +70,9 @@ background: '/img/bg-about.jpg'
             <div class="student">
                 <div class="student-top">
                 {% if student.image != null and student.image != "" %}
-                    <img src= {{ "/img/posts/students/" | append: student.image }}>
+                    <div class="student-photo" style="background-image:url({{ student.image }})"></div>
                 {% else %}
-                    <img src="/img/posts/unknown.jpg">
+                    <div class="student-photo" style="background-image:url(/img/posts/unknown.jpg)"></div>
                 {% endif %}
                 </div>
     
@@ -81,7 +81,7 @@ background: '/img/bg-about.jpg'
                     <p class="student-field">{{ student.interest }}</p>
                     <hr class="student-division">
                     <div class="student-info">
-                        <p class="student-email">Email: {{ student.email }}</p>
+                        <p class="student-email">{{ student.email }}</p>
                         <div class="student-link">
                             {% if student.github != null and student.github != "" %}
                             <a target="_blank" href="{{ student.github }}"><i class="fab fa-github"></i></a>
