--- a/people.html
+++ b/people.html
@@ -47,14 +47,17 @@ background: '/img/bg-about.jpg'
                     <p class="student-email">{{ student.email }}</p>
                     <div class="student-link">
                         {% if student.github != null and student.github != "" %}
-                            <a target="_blank" href="{{ student.github }}"><i class="fab fa-github"></i></a>
-                            {% endif %}
-                            {% if student.instagram != null and student.instagram != "" %}
-                            <a target="_blank" href="{{ student.instagram }}"><i class="fab fa-instagram-square"></i></a>
-                            {% endif %}
-                            {% if student.facebook != null and student.facebook != "" %}
-                            <a target="_blank" href="{{ student.facebook }}"><i class="fab fa-facebook"></i></a>
-                            {% endif %}
+                        <a target="_blank" href="{{ student.github }}"><i class="fab fa-github"></i></a>
+                        {% endif %}
+                        {% if student.instagram != null and student.instagram != "" %}
+                        <a target="_blank" href="{{ student.instagram }}"><i class="fab fa-instagram-square"></i></a>
+                        {% endif %}
+                        {% if student.facebook != null and student.facebook != "" %}
+                        <a target="_blank" href="{{ student.facebook }}"><i class="fab fa-facebook"></i></a>
+                        {% endif %}
+                        {% if student.linkedin != null and student.linkedin != "" %}
+                        <a target="_blank" href="{{ student.linkedin }}"><i class="fab fa-linkedin"></i></a>
+                        {% endif %}
                     </div>
                 </div>
                 
@@ -91,6 +94,9 @@ background: '/img/bg-about.jpg'
                             {% endif %}
                             {% if student.facebook != null and student.facebook != "" %}
                             <a target="_blank" href="{{ student.facebook }}"><i class="fab fa-facebook"></i></a>
+                            {% endif %}
+                            {% if student.linkedin != null and student.linkedin != "" %}
+                            <a target="_blank" href="{{ student.linkedin }}"><i class="fab fa-linkedin"></i></a>
                             {% endif %}
                         </div>
                     </div>
