--- a/seminar.html
+++ b/seminar.html
@@ -12,8 +12,8 @@ background: '/img/bg-post.jpg'
         <p>We hold seminars on large-scale data processing, graph AI, distributed graph algorithms, and any others related to data mining.</p>
         <p>The information on the seminar is as follows:</p>
         <ul>
-            <li>Every Friday 4:00 pm - 5:00 pm</li>
-            <li>K-Lab(723), Futuer Hall, Kookmin University</li>
+            <li>Every Friday 6:00 pm - 6:40 pm</li>
+            <li>P-Lab(609), Futuer Hall, Kookmin University</li>
             <li>Topic: On-going researches and data mining research papers (KDD, ICDM, ICDE, CIKM, etc.)</li>
         </ul>
     </div> 
