changed layout in pages and people

--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 description: 
 background: '/img/bg-contact.jpg'
 ---
+<div class="container">
 <div>
     <div class="publication-title">International</div>
     <div class="publications-per-year">
@@ -189,4 +190,5 @@ background: '/img/bg-contact.jpg'
             </div>
         </div>
     </div>
+</div>
 </div>
