arranged students when screen is small

--- a/people.html
+++ b/people.html
@@ -24,7 +24,7 @@ background: '/img/bg-about.jpg'
             <span class="professor-name">Ha-Myung Park</span>
             <div class="professor-field">
                 Assistant Professor<br>
-                Collage of Computer Science<br>
+                College of Computer Science<br>
                 Kookmin University<br>
                 <br>
                 Office: Room 403, Future Hall (미래관)<br>
