--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,13 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
+                <b>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest</b><br>
+                SIGKDD<br>
+                Sanghong Kim, Ha-Myung Park<br>Ω
+            </div>     
+        </div>
+        <div class="publications">
+            <div class="publication">
                 <b>UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware (to appear)</b><br>
                 PLOS ONE<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
