Add KDD to publications

--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,18 @@ background: '/img/bg-contact.jpg'
     <div class="publication-title">International</div>
     <div class="publications-per-year">
         <div class="year-mark">
+            2023
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest</b><br>
+                SIGKDD<br>
+                Sanghong Kim, Ha-Myung Park<br>
+            </div>     
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
             2022
         </div>
         <div class="publications">
