Add KDD to publications

--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@ background: '/img/bg-contact.jpg'
     <div class="publication-title">International</div>
     <div class="publications-per-year">
         <div class="year-mark">
-            2022
+            2023
         </div>
         <div class="publications">
             <div class="publication">
@@ -17,6 +17,11 @@ background: '/img/bg-contact.jpg'
                 SIGKDD<br>
                 Sanghong Kim, Ha-Myung Park<br>Ω
             </div>     
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
+            2022
         </div>
         <div class="publications">
             <div class="publication">
