Add KDD to publications

--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,7 @@ background: '/img/bg-contact.jpg'
             <div class="publication">
                 <b>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest</b><br>
                 SIGKDD<br>
-                Sanghong Kim, Ha-Myung Park<br>Ω
+                Sanghong Kim, Ha-Myung Park<br>
             </div>     
         </div>
     </div>
