add seminar & modify publications

--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@ background: '/img/bg-contact.jpg'
         <div class="publications">
             <div class="publication">
                 <b>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest</b><br>
-                SIGKDD<br>
+                ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
                 Sanghong Kim, Ha-Myung Park<br>
             </div>     
         </div>
@@ -40,7 +40,7 @@ background: '/img/bg-contact.jpg'
             <div class="publication">
                 <b>Accurate Relational Reasoning in Edge-labeled Graphs by Multi-Labeled Random Walk with Restart</b><br>
                 World Wide Web Journal (WWWJ)<br>
-                Jinhong Jung, Woojeong Jin, Ha-myung Park, and U Kang<br>
+                Jinhong Jung, Woojeong Jin, Ha-Myung Park, and U Kang<br>
                 <a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>
             </div>     
             <div class="publication">
