--- a/seminar.html
+++ b/seminar.html
@@ -27,6 +27,7 @@ background: '/img/bg-post.jpg'
             <th scope="col" style="text-align:center">Date</th>
             <th scope="col" style="text-align:center">Presenter</th>
             <th scope="col" style="text-align:center">Title</th>
+            <th scope="col" style="text-align:center">Slide</th>
         </thead>
         <tbody>
             {% for item in site.data.seminar %}
