--- a/seminar.html
+++ b/seminar.html
@@ -35,7 +35,7 @@ background: '/img/bg-post.jpg'
                 <td style="text-align:center">{{ item.date }}</td>
                 <td style="text-align:center">{{ item.presenter }}</td>
                 <td>{{ item.title }}</td>
-                <td>
+                <td style="text-align:center;vertical-align:middle">
                     {% if item.slide != null and item.slide != "" %}
                     <a href="{{ item.slide }}">[slide]</a>
                     {% endif %}
