upload seminar slide

--- a/seminar.html
+++ b/seminar.html
@@ -37,7 +37,7 @@ background: '/img/bg-post.jpg'
                 <td>{{ item.title }}</td>
                 <td style="text-align:center;vertical-align:middle">
                     {% if item.slide != null and item.slide != "" %}
-                    <a href="{{ item.slide }}">[slide]</a>
+                    <a href="{{ item.slide }}" download>[slide]</a>
                     {% endif %}
                 </td>
             </tr>
