--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,7 @@ background: '/img/bg-contact.jpg'
                 <b>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest</b><br>
                 ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
                 Sanghong Kim, Ha-Myung Park<br>
+                <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
             </div>     
         </div>
     </div>
@@ -25,10 +26,10 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
-                <b>UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware (to appear)</b><br>
+                <b>UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware</b><br>
                 PLOS ONE<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
-                <!--<a href="https://datalab.snu.ac.kr/~ukang/papers/lrwrWWWJ20.pdf" class="publication-link">[PDF]</a>-->
+                <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0277527" class="publication-link">[PDF]</a>
             </div>     
         </div>
     </div>
