--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@ background: '/img/bg-contact.jpg'
                 ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
                 Sanghong Kim, Ha-Myung Park<br>
                 <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
+                <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a>
             </div>     
         </div>
     </div>
@@ -30,6 +31,7 @@ background: '/img/bg-contact.jpg'
                 PLOS ONE<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
                 <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0277527" class="publication-link">[PDF]</a>
+                <a href="https://github.com/UniCon2021/UniCon" class="publication-link">[Github]</a>
             </div>     
         </div>
     </div>
