publications & student 수정

--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,27 @@ background: '/img/bg-contact.jpg'
     <div class="publication-title">International</div>
     <div class="publications-per-year">
         <div class="year-mark">
+            2024
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>Enhancing Heterophilic Graph Neural Network Performance through Label Propagation in K-Nearest Neighbor Graphs</b><br>
+                IEEE International Conference on Big Data and Smart Computing (BigComp)<br>
+                HyunSeok Park, Ha-Myung Park<br>
+                <!-- <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
+                <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+            </div> 
+            <div class="publication">
+                <b>Latent Representation Generation for Efficient Content-Based Image Retrieval in Weather Satellite Images Using Self-Supervised Segmentation</b><br>
+                IEEE International Conference on Big Data and Smart Computing (BigComp)<br>
+                Ismail Abdulhakin, Ha-Myung Park<br>
+                <!-- <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
+                <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+            </div>       
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
             2023
         </div>
         <div class="publications">
@@ -159,6 +180,28 @@ background: '/img/bg-contact.jpg'
 </div>
 <div>
     <div class="publication-title">Domestic</div>
+    <div class="publications-per-year"> 
+        <div class="year-mark">
+            2023
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>k-코어 기반 그래프 증강 기법</b><br>
+                한국소프트웨어종합학술대회<br>
+                박현석, 김수지, 박하명<br>
+            </div>
+            <div class="publication">
+                <b>KcBERT 언어 모델을 사용한 뉴스 기사 혐오 댓글 분류</b><br>
+                한국소프트웨어종합학술대회<br>
+                강지수, 박하명, 강승식<br>
+            </div>
+            <div class="publication">
+                <b>KcELECTRA 를 활용한 혐오성 댓글 분류</b><br>
+                한국소프트웨어종합학술대회<br>
+                이영준, 박하명, 강승식<br>
+            </div>
+        </div>
+    </div>
     <div class="publications-per-year">
         <div class="year-mark">
             2022
