--- a/people.html
+++ b/people.html
@@ -84,7 +84,7 @@ background: '/img/bg-about.jpg'
         <div class="student">
             <div class="student-top">
             {% if student.image != null and student.image != "" %}
-                <div class="student-photo" style="background-image:url({{ student.image }})"></div>
+                <div class="student-photo" style="background-image:url({{ student.image }}); background-position:center center;"></div>
             {% else %}
                 <div class="student-photo" style="background-image:url(/img/posts/unknown.jpg)"></div>
             {% endif %}
