add edbt paper, and bigcomp pdf files

--- a/publications.html
+++ b/publications.html
@@ -13,18 +13,24 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
+                <b>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing (to appear)</b><br>
+                Changhun Han, Suji Kim and Ha-Myung Park<br>
+                <!-- <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a> -->
+                <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+            </div>
+            <div class="publication">
                 <b>Enhancing Heterophilic Graph Neural Network Performance through Label Propagation in K-Nearest Neighbor Graphs</b><br>
                 IEEE International Conference on Big Data and Smart Computing (BigComp)<br>
                 HyunSeok Park, Ha-Myung Park<br>
-                <!-- <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
-                <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+                <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a>
+                <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
             </div> 
             <div class="publication">
-                <b>Latent Representation Generation for Efficient Content-Based Image Retrieval in Weather Satellite Images Using Self-Supervised Segmentation</b><br>
+                <b>Latent Representation Generation for Efficient Content-Based Image Retrieval in Weather Satellite Images Using Self-Supervised Segmentation (poster)</b><br>
                 IEEE International Conference on Big Data and Smart Computing (BigComp)<br>
                 Ismail Abdulhakin, Ha-Myung Park<br>
-                <!-- <a href="https://dl.acm.org/doi/abs/10.1145/3580305.3599327" class="publication-link">[PDF]</a>
-                <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+                <a href="/assets/papers/bigcomp24_ismail.pdf" class="publication-link">[PDF]</a>
+                <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
             </div>       
         </div>
     </div>
