modify edbt info.

--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,7 @@ background: '/img/bg-contact.jpg'
         <div class="publications">
             <div class="publication">
                 <b>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing (to appear)</b><br>
+                International Conference on Extending Database Technology (EDBT)<br>
                 Changhun Han, Suji Kim and Ha-Myung Park<br>
                 <!-- <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a> -->
                 <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
