--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,13 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
+                <b>BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures (to appear)</b><br>
+                IEEE International Conference on Data Engineering (ICDE)<br>
+                Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
+                <!-- <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a> -->
+                <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
+            </div>
+            <div class="publication">
                 <b>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing (to appear)</b><br>
                 International Conference on Extending Database Technology (EDBT)<br>
                 Changhun Han, Suji Kim and Ha-Myung Park<br>
