--- a/people.html
+++ b/people.html
@@ -18,7 +18,7 @@ background: '/img/bg-about.jpg'
     <div class="division-line">Principal Investigator</div>
     <div class="head-professor row">
         <div class="professor-left col-md-6">
-            <img src="/img/posts/hmpark_ky.jpg">
+            <img src="/img/posts/hmpark_2404.png">
         </div>
         <div class="professor-right col-md-6">
             <span class="professor-name">Ha-Myung Park</span>
