--- a/publications.html
+++ b/publications.html
@@ -20,10 +20,10 @@ background: '/img/bg-contact.jpg'
                 <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
             </div>
             <div class="publication">
-                <b>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing (to appear)</b><br>
+                <b>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing</b><br>
                 International Conference on Extending Database Technology (EDBT)<br>
                 Changhun Han, Suji Kim and Ha-Myung Park<br>
-                <!-- <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a> -->
+                <a href="/assets/papers/edbt24_noye.pdf" class="publication-link">[PDF]</a>
                 <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
             </div>
             <div class="publication">
