--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@ background: '/img/bg-contact.jpg'
                 <b>BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures (to appear)</b><br>
                 IEEE International Conference on Data Engineering (ICDE)<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
-                <!-- <a href="/assets/papers/bigcomp24_hspark.pdf" class="publication-link">[PDF]</a> -->
+                <a href="/assets/papers/ICDE24_cekim.pdf" class="publication-link">[PDF]</a>
                 <!-- <a href="https://github.com/MRDF2023/MRDF" class="publication-link">[Github]</a> -->
             </div>
             <div class="publication">
