--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@ background: '/img/bg-contact.jpg'
         </div>
         <div class="publications">
             <div class="publication">
-                <b>BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures (to appear)</b><br>
+                <b>BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures</b><br>
                 IEEE International Conference on Data Engineering (ICDE)<br>
                 Chaeeun Kim, Changhun Han, and Ha-Myung Park<br>
                 <a href="/assets/papers/ICDE24_cekim.pdf" class="publication-link">[PDF]</a>
