--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
 layout: page
+title: Data Mining Lab. at Kookmin Univ.
 background: '/img/bg-index.jpg'
 ---
+
+
 
 우리 연구실은 데이터 마이닝, 기계 학습, 정보 검색 등의 기술을 활용하여 대규모 데이터를 효율적으로 처리하고 분석할 수 있는 확장 가능한 알고리즘을 연구 및 개발합니다. 특히, 그래프 마이닝, 추천시스템, 기계학습, 분산 병렬 알고리즘 등의 주제에 주력하고 있습니다. 
 
